--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" href="../static/pi.png">
-        <link rel="stylesheet"
+        <meta charset="UTF-8">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/eel.js"></script>
+        <script type="text/javascript" src="./script.js"></script>
     </head>
+    <body>
+        <button onclick="quit()">Quit</button>
+    </body>
 </html>
