--- a/client/src/splash.html
+++ b/client/src/splash.html
@@ -5,12 +5,11 @@
         <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
         <link rel="stylesheet" href="/style/style.css">
         <link rel="stylesheet" href="/style/bootstrap.min.css">
-        <script type="text/javascript" src="/script/bootstrap.bundle.min.js"></script>
-        <script type="text/javascript" src="/eel.js"></script>
     </head>
     <body>
-        <div class="container-fluid bg-black text-white fixed-top" id="clockpanel" >
-            <p id="clock"></p>
+        <img src="/static/pi.png" style="width: 100vw; height: 100vh;"> 
+        <div class="progress fixed-bottom rounded-0">
+            <div class="progress-bar" id="progress"></div>
         </div>
         
         <script type="text/javascript" src="/script/script.js"></script>
