Finish server side. Finish Front-end of client side.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' ;" />
+    <meta http-equiv="Content-Security-Policy" content="script-src http://localhost:35729 http://localhost:8000 'self' ;" />
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Bảng điều khiển</title>
@@ -12,7 +12,7 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
-	<script src='/eel.js'></script>
+	<script src='http://localhost:8000/eel.js'></script>
 </head>
 
 <body>
