--- a/client/splash/splash.html
+++ b/client/splash/splash.html
@@ -5,7 +5,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Average+Sans" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="Content-Security-Policy" content="default-src https://fonts.googleapis.com https://fonts.gstatic.com 'unsafe-inline' 'self'; script-src 'unsafe-inline' 'self'">
+		<meta http-equiv="Content-Security-Policy" content="default-src https://fonts.googleapis.com https://fonts.gstatic.com 'unsafe-inline' 'self'; script-src http://localhost:8000 'unsafe-inline' 'self'">
+        <script src="http://localhost:8000/eel.js"></script>
         <style>
             :root {
                 --size: 500px;
