--- a/client/src/app.html
+++ b/client/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="Content-Security-Policy" content="default-src https://fonts.googleapis.com https://fonts.gstatic.com 'unsafe-inline' 'self'; script-src 'unsafe-inline' 'self'">
+		<meta http-equiv="Content-Security-Policy" content="default-src https://fonts.googleapis.com https://fonts.gstatic.com 'unsafe-inline' 'self'; script-src http://localhost:8000 'unsafe-inline' 'self'">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="%sveltekit.assets%/global.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
